--- a/projet_web/css/message.css
+++ b/projet_web/css/message.css
@@ -7,7 +7,10 @@
 }
 
 .p_center {
+    font-size: 30px;
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
 
 .form_message {
@@ -77,4 +80,11 @@
 
 table {
     margin-left: 10px;
+}
+
+.titre_centre {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
