--- a/projet_web/css/annonce.css
+++ b/projet_web/css/annonce.css
@@ -524,3 +524,19 @@ input[type=text], select {
 .prixannonce{
     margin-top: 110px;
 }
+
+.testretour{
+    grid-row: 1 / span 2;
+    grid-column: 6;
+}
+
+.retour{
+    width: 126.33px;
+    height: 70px;
+    background-color: var(--texte-retour);
+    font-weight: bold;
+    border: none;
+    color: var(--texte-blanc);
+    grid-row: 1 / span 2;
+    grid-column: 6;
+}
